--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,11 @@
            <artifactId>gson</artifactId>
            <version>2.8.1</version>
        </dependency>
-
+       <dependency>
+           <groupId>org.mariadb.jdbc</groupId>
+           <artifactId>mariadb-java-client</artifactId>
+           <version>2.6.0</version>
+       </dependency>
    </dependencies>
 
 
